# ClionProject

./: README.md
OPP/Lab2ver1/: CMakeLists.txt  lab2ver1  lab2ver1.cpp
OPP/lab1ver1/: CMakeLists.txt  lab1ver1  lab1ver1.cpp
OPP/lab1ver2/: CMakeLists.txt  lab1ver2  lab1ver2.cpp
OPP/lab2ver2/: CMakeLists.txt  lab2ver2  lab2ver2.cpp
OPP/lab3/: CMakeLists.txt  lab3  lab3.cpp
OPP/lab3ver1/: CMakeLists.txt
OPP/lab4/: CMakeLists.txt  lab4.cpp
OPP/lab5/: 0.txt  1.txt  2.txt  3.txt  CMakeLists.txt  lab5  lab5.cpp
OPP/lab5ver1/: CMakeLists.txt  lab5  lab5.cpp
OPP/probnay/: CMakeLists.txt  pr.cpp
OPP/schedule2/: CMakeLists.txt  schedule2.cpp  schedulever2
OPP/shedule/: CMakeLists.txt  schedule.cpp  schedulever1
Osi/: hello.c
Osi/3rev3bal/: 3bal.c
Osi/Compare/ksat_rof_riD/: otk.txt
Osi/Compare/ksat_rof_riD/1RID/: 1elif
Osi/Dir_for_task/: kto.txt
Osi/Dir_for_task/DIR1/dir2/: file2
Osi/create_proc/: CMakeLists.txt  lab.c
Osi/ksat_orf_riD/: olleh.txt
Osi/ksat_rof_riD/: otk.txt
Osi/lab3/: CMakeLists.txt  lab3.cpp
Osi/lab3_3/: CMakeLists.txt  lab3_3.cpp
Osi/lab3ver1/: CMakeLists.txt  lab3  lab3.c
Osi/lab3ver3/: CMakeLists.txt  lab3.c
Osi/lab3ver4/: CMakeLists.txt  lab3ver4.c
Osi/lab4/: CMakeLists.txt  lab4.c
Osi/lab6_client/: CMakeLists.txt  client.c
Osi/lab6_server/: CMakeLists.txt  server.c
ksat_rof_riD/: olleh.txt
ksat_rof_riD/1RID/2rid/: 2elif
labs1sem/Blas/: Blas.cpp  CMakeLists.txt
labs1sem/CSVParser/: CMakeLists.txt  Test.cpp  main.cpp
labs1sem/CSVParser/CsvParser_dir/: CMakeLists.txt  Csv.cpp  Csv.h
labs1sem/EVM1/: CMakeLists.txt  main.cpp
labs1sem/Intrinsics/: CMakeLists.txt  Intrinsics.cpp
labs1sem/Lab1_oop/: BigInt_Tests.cpp  CMakeLists.txt  My_Tests.cpp  main.cpp
labs1sem/Lab1_oop/BigInt_directory1/: BigInt.cpp  BigInt.h  CMakeLists.txt
labs1sem/Lab1_oop/LaB/: CMakeLists.txt  lab.cpp
labs1sem/Lab1_oop/Пробная прога/: CMakeLists.txt
labs1sem/MultMatrixStandart/: CMakeLists.txt  InversionMatrix.cpp
labs1sem/lab2/: CMakeLists.txt  Test.cpp  main.cpp
labs1sem/lab2/Game/: Choice.h  GameStrategy.h
labs1sem/lab2/Game/CompetitionWithDetail/: Button.cpp  Button.h  CompetitionWithDetail.cpp  CompetitionWithDetail.h
labs1sem/lab2/Game/CompetitionWithoutDetail/: CompetitionWithoutDetail.cpp  CompetitionWithoutDetail.h
labs1sem/lab2/Game/GameMatrix/: FileMatrix.txt  GameMatrix.cpp  GameMatrix.h  GameScore.cpp  GameScore.h
labs1sem/lab2/Game/InterfaceGame/: InterfaceGame.cpp  (+1 more)
labs1sem/lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab3  main.cpp  sound
labs1sem/lab3/ConfigReader/: ConfigReader.cpp  ConfigReader.h
labs1sem/lab3/Consts/: Consts.h
labs1sem/lab3/Converter/: Converter.cpp  Converter.h
labs1sem/lab3/Exceptions/: Exceptions.cpp  Exceptions.h
labs1sem/lab3/ProcessManager/: ProcessManager.cpp  ProcessManager.h
labs1sem/lab3/Sound/: config_file
labs1sem/lab3/WaveEdit/: WaveEdit.cpp  WaveEdit.h
labs1sem/lab4finaly/: CMakeLists.txt  file  lab4.cpp
labs1sem/lab4o/: CMakeLists.txt  lab4.cpp
labs1sem/lab4oop/: CMakeLists.txt  Tests.cpp  file  file1  file2  file3  file4  main.cpp
labs1sem/lab4oop/CSVParser/: CMakeLists.txt  CSVParser.cpp  CSVParser.h
labs1sem/lab7/: CMakeLists.txt  lab7ver1.cpp  lab7ver2.cpp  lab7ver3.cpp
labs1sem/lab9evm/: CMakeLists.txt  lab9.cpp
labs1sem/lab9ver2/: lab9.cpp
labs1sem/labevm8/: CMakeLists.txt  lab8evm.cpp
labs1sem/untitled1/: CMakeLists.txt  main.cpp
labs1sem/untitled1/vector/: CMakeLists.txt  vector.cpp  vector.h
labs1sem/wow/: CMakeLists.txt  wow.cpp
(+18 files in other folders)
